--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
   <queries>
     <package android:name="com.appcoins.wallet.dev" />
     <package android:name="com.appcoins.wallet" />
+    <package android:name="com.dti.folderlauncher" />
 <!--    <package android:name="cm.aptoide.pt" />-->
   </queries>
 
