--- a/gradle.properties
+++ b/gradle.properties
@@ -40,3 +40,5 @@ APPCOINS_WALLET_KEY_ALIAS=replace
 APPCOINS_WALLET_KEY_PASSWORD=replace
 BACK_END_HOST_DEV=https://apichain.dev.catappult.io/
 BACK_END_HOST_PROD=https://apichain.catappult.io/
+GAMESHUB_PACKAGE=com.dti.folderlauncher
+GAMESHUB_PACKAGE_DEV=com.dti.hub
